# buses_system

./: .env  .gitignore  Untitled.drawio  compose.yaml
.github/workflows/: docker-image.yml
ai_models/: base_model.ipynb  run_training.ipynb
avro/: vehicle.avsc
containers/: kafka.yaml  pg.yaml  prom_grafana.yaml
containers/prometheus/: prometheus.yml
libraries/: pyproject.toml  requirements.txt
libraries/src/libraries/: base_service.py  monitored_service.py
libraries/src/libraries/pg_models/: directions.py  feed_dicts.py  migrate.ipynb  operators.py  positions.py
rest_powered_scraper/: pyproject.toml
scraper/: pyproject.toml  requirements.txt  tasks.py
scraper/src/: Dockerfile
scraper/src/scraper/: __main__.py  scraper.py
scraper/src/scraper/kafka/: producer_config.py  topic.py
scraper/src/scraper/models/: atomic_schedule.py  avro_model.py  parquet_model.py  running_vehicles.py  scraper_metric.py
shovel/: pyproject.toml  requirements.txt
shovel/src/: Dockerfile
shovel/src/shovel/: __main__.py  shovel.py
shovel/src/shovel/kafka/: message_loop.py  receiver_config.py
shovel/src/shovel/models/: shovel_metric.py
