[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "aiohttp==3.9.1",
  "prometheus-client==0.20.0",
]
requires-python = ">=3.11"
name = "libraries"
version = "0.0.1"
description = "Libraries"
authors = [
  { name = "Kajetan Patryk Zarzycki", email = "kp.zarzycki@gmail.com" },
]
maintainers = [
  { name = "Kajetan Patryk Zarzycki", email = "kp.zarzycki@gmail.com" },
]

[project.optional-dependencies]
dev = ["black==23.3.0", "invoke==2.1.2", "mypy==1.3.0", "ruff==0.0.267"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict = false
pretty = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "nonion"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyodbc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client"
ignore_missing_imports = true
